# slrbs

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  imgui.ini  mkdocs.yml
.github/workflows/: build.yml  docker.yml  python.yml  webassembly.yml
bindings/python/contact/: Contact.cpp
bindings/python/joints/: Joints.cpp
bindings/python/rigidbody/: Rigidbody.cpp
blender/: export.py  ext.py  import.py
cmake/: CPMBootstrap.cmake  CPMRecipe_GLM.cmake  CPMRecipe_OpenCV.cmake  CPMRecipe_Polyscope.cmake  CPMRecipe_Pybind11.cmake  CPMRecipe_Torch.cmake  Options.cmake
cmake/cmp/: CMPConfig.cmake
cmake/find/: FindSIMD.cmake
cmake/recipes/: CPM.cmake  eigen.cmake  pybind11.cmake  spdlog.cmake
cmake/slrbs/: slrbs_cpm_cache.cmake  slrbs_use_colors.cmake  slrbs_warnings.cmake
cpm/recipes/: pybind11.cmake
docs/: index.md
docs/file-formats/: scenario-json.md
docs/getting-started/: quick-start.md
docs/technical/solvers/: overview.md  pgs.md
include/collision/: AABB.h  BVH.h  BoxBoxCollision.h  BroadPhase.h  CollisionDetect.h  CollisionDetectBVH.h  CollisionFactory.h  CollisionHandler.h  CollisionHandlerSpecializartions.h  CollisionPair.h  CollisionRegistry.h  CollisionUtils.h  CylinderPlaneCollision.h  Geometry.h  SphereBoxCollision.h  SphereSphereCollision.h
include/contact/: Contact.h  FaceContactTracker.h
include/friction/: FrictionHandler.h  FrictionModel.h  FrictionModels.h  FrictionRegistry.h  FrictionStrategy.h
include/geometry/: Geometry.h
include/joint/: Hinge.h  Joint.h  Spherical.h
include/joints/: Distance.h  Prismatic.h  Universal.h
include/log/: BinaryLogger.h  CSVLogger.h  JSONLogger.h  Logger.h  LoggerFactory.h
include/logging/: SimDataLogger.h
include/renderer/: Material.h  PolyscopeRenderer.h  RenderUtils.h  RendererFactory.h  RigidBodyRenderer.h  ShaderManager.h  ShaderVars.h  TextureManager.h
include/rigidbody/: RigidBody.h  RigidBodyState.h  RigidBodySystem.h  Scenarios.h
include/scenarios/: ScenarioLoader.h  Scenarios.h
include/solvers/: Solver.h  SolverBoxBPP.h  SolverFactory.h  SolverHandler.h  SolverPGS.h  SolverPGSSM.h  SolverProximal.h  SolverRegistry.h  SolverUtils.h
include/solvers/constraint/: ConstraintStrategy.h
include/util/: ScenarioLoader.h  Types.h  VisualProperties.h
include/utils/: JsonLoader.h  Serializer.h  TextureLoader.h
include/viewer/: ScenarioManager.h  SimViewer.h  SimulationManager.h  ViewerConfig.h  ViewerInteraction.h  ViewerUI.h
resources/configs/: default_viewer.json
resources/models/scenarios/: ball_drop.json  car_scene.json  cube_gravity.json
resources/scenarios/: ball_drop.json  car_scene.json  cube_gravity.json  cylinder_on_plane.json  marble_box.json  rope_bridge.json  sphere_box.json  stack.json  swinging_boxes.json
resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/collision/: AABB.cpp  BVH.cpp  BoxBoxCollision.cpp  CollisionDetect.cpp  CollisionDetectBoxBox.cpp  CollisionRegistry.cpp  CollisionUtils.cpp  CylinderPlaneCollision.cpp  SDFBoxCollision.cpp  SphereBoxCollision.cpp  SphereSphereCollision.cpp
src/collision/broad_phase/: SweepAndPrune.cpp
src/contact/: Contact.cpp  FaceContactTracker.cpp
src/friction/: FrictionModel.cpp  FrictionModels.cpp  FrictionRegistry.cpp
src/joint/: Hinge.cpp  Spherical.cpp
src/joints/: Distance.cpp  Prismatic.cpp  Universal.cpp
src/log/: BinaryLogger.cpp  CSVLogger.cpp  JSONLogger.cpp  Logger.cpp  LoggerFactory.cpp
src/logging/: SimDataLogger.cpp
src/renderer/: Material.cpp  PolyscopeRenderer.cpp  RenderUtils.cpp  RendererFactory.cpp  RigidBodyRenderer.cpp  ShaderManager.cpp  TextureManager.cpp
src/rigidbody/: RigidBody.cpp  RigidBodyState.cpp  RigidBodySystem.cpp
src/scenarios/: ScenarioLoader.cpp  Scenarios.cpp
src/solvers/: Solver.cpp  SolverBoxBPP.cpp  SolverBoxPGS.cpp  SolverBuilder.cpp  SolverConjGradient.cpp  SolverConjResidual.cpp  SolverPGS.cpp  SolverPGSSM.cpp  SolverProximal.cpp  SolverUtils.cpp
src/solvers/constraint/: ConstraintStrategy.cpp
src/util/: MeshAssets.cpp  ScenarioLoader.cpp  VisualProperties.cpp
src/utils/: JsonLoader.cpp  Serializer.cpp  TextureLoader.cpp
src/viewer/: ScenarioManager.cpp  SimViewer.cpp  SimulationManager.cpp  ViewerConfig.cpp  ViewerInteraction.cpp  ViewerUI.cpp
